<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/black"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/queueB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/stackB"
        android:layout_below="@+id/stackB"
        android:layout_marginTop="42dp"
        android:textColor="@color/black"
        android:text="@string/queue" />

    <Button
        android:id="@+id/stackB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="95dp"
        android:textColor="@color/black"
        android:text="@string/stack" />

    <Button
        android:id="@+id/treeB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/queueB"
        android:layout_alignParentRight="true"
        android:layout_marginRight="34dp"
        android:textColor="@color/black"
        android:text="@string/tree" />

    <Button
        android:id="@+id/listB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/queueB"
        android:layout_alignBottom="@+id/queueB"
        android:layout_alignLeft="@+id/treeB"
        android:text="@string/list"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/hashB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/queueB"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/hash"
        android:textColor="@color/black" />

</RelativeLayout>